# boxim-sdk

./: .gitignore  README.md  pyproject.toml
boxim/: __init__.py  boxim.py  client.py
boxim/util/: __init__.py  config.py  container.py  decorators.py  emoji.py  enums.py  env.py  events.py  exceptions.py  logging_util.py  message_builder.py  models.py  protocols.py  rtc.py  streams.py  transport_http.py  transport_ws.py  uploader.py
